--- a/GlaserMethod.ipynb
+++ b/GlaserMethod.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -102,6 +102,9 @@
     "layers = pd.DataFrame(columns=[\"Material\", \"Thickness\", \"Conductivity\", \"mu\"])\n",
     "\n",
     "# Example 1\n",
+    "# Source: # Source: https://www.youtube.com/watch?v=ouwlZ6pF7KU\n",
+    "\n",
+    "# We assume worst case --> pick 20 and 25 for mu\n",
     "\n",
     "plaster = [\"Plaster\", 0.02, 0.35, 10]\n",
     "fiberglass = [\"Fiberglass\", 0.24, 1.4, 48]\n",
